@@ -26,6 +26,8 @@ import java.util.List;
 
 import org.apache.hadoop.hbase.HBaseAdmin;
 import org.apache.hadoop.hbase.HBaseConfiguration;
+import org.apache.hadoop.hbase.HConnection;
+import org.apache.hadoop.hbase.HConnectionManager;
 import org.apache.hadoop.hbase.HTable;
 import org.apache.hadoop.io.Text;
 
@@ -46,6 +48,11 @@ public class DeleteCommand extends BasicCommand {
       throw new IllegalArgumentException("Column list is null");
     }
     try {
+      HConnection conn = HConnectionManager.getConnection(conf);
+      if (!conn.tableExists(new Text(this.tableName))) {
+        return new ReturnMsg(0, "'" + this.tableName + "' Table not found");
+      }
+      
       HBaseAdmin admin = new HBaseAdmin(conf);
       HTable hTable = new HTable(conf, new Text(tableName));
       long lockID = hTable.startUpdate(new Text(rowKey));
